# shootinthefoot

./: .gitignore  CMakeLists.txt
osdep/: osdep.h
src/: main.cpp  oui.h
